--- a/css/styles.css
+++ b/css/styles.css
@@ -45,12 +45,16 @@ body {
 
 /* Práctica en clase */
 .dad {
-    height: 60rem;
+    height: 40rem;
     width: 70%;
     background-color: #876B91;
     border-radius: 8px;
     margin: 2rem auto;
     padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 .son {
     background-color: #E2EBF3;
